--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     </div>
     <div id="navigation-container">
         <ul>
-            <li><a href="#home">HOME</a></li>
-            <li><a href="#news">ABOUT</a></li>
-            <li><a href="#contact">PROJECT</a></li>
-            <li><a href="#about">GROUP WORK</a></li>
+            <li><a class="tools-selected-item" href="#">HOME</a></li>
+            <li><a href="./about.html">ABOUT</a></li>
+            <li><a href="./project.html">PROJECT</a></li>
+            <li><a href="./group.html">GROUP WORK</a></li>
         </ul>
     </div>
     
