--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Yaman Kalaji Home Page</title>
+    <title>Yaman Kalaji | About </title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
